[FE,BE] Api get inventory room, select room in room page
