# gudangku/storage/api-docs/api-docs.json
@@ -1333,6 +1333,115 @@
                 ]
             }
         },
+        "/api/v1/inventory/room": {
+            "get": {
+                "tags": [
+                    "Inventory"
+                ],
+                "summary": "Get inventory room",
+                "description": "This request is used to get all inventory room. This request is using MySql database, and has protected routes",
+                "operationId": "f8e78db937554a9da1f9d3efad054fac",
+                "responses": {
+                    "200": {
+                        "description": "inventory fetched",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "inventory room fetched"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "inventory_room": {
+                                                        "type": "string",
+                                                        "example": "Main Room"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "protected route need to include sign in token as authorization bearer",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "failed"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "you need to include the authorization token from login"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "inventory room failed to fetched",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "failed"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "inventory room not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "error"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "something wrong. please contact admin"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/report/delete/item/{id}": {
             "delete": {
                 "tags": [
@@ -2616,9 +2725,13 @@
                                                         "type": "string",
                                                         "example": "Jan"
                                                     },
-                                                    "total": {
+                                                    "total_report": {
                                                         "type": "integer",
-                                                        "example": 10
+                                                        "example": 3
+                                                    },
+                                                    "total_item": {
+                                                        "type": "integer",
+                                                        "example": 8
                                                     }
                                                 },
                                                 "type": "object"
